@@ -1,0 +1,6 @@
+config.guess
+config.sub
+depcomp
+install-sh
+mdate-sh
+texinfo.tex
