@@ -14,8 +14,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-AUTOMAKE_OPTIONS = ../src/ansi2knr
-
 SUBDIRS = posix
 
 noinst_LIBRARIES = libgreputils.a
