@@ -15,8 +15,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-AUTOMAKE_OPTIONS = ansi2knr
-
 LN = ln
 
 bin_PROGRAMS = grep egrep fgrep
